objects/Call_List__c.object
<CustomObject>
    <fields>
        <fullName>CampaignId__c</fullName>
        <label>CampaignId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CampaignMemberId__c</fullName>
        <label>CampaignMemberId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <label>ContactId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsClosed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsClosed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Type__c</fullName>
        <formula>If(CONTAINS(OwnerId, &apos;005&apos;),&apos;User&apos;,&apos;Queue&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Name__c</fullName>
        <label>Queue_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Call List</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Dialer_Queue_UK_2_Call_List</fullName>
        <filterScope>Queue</filterScope>
        <label>Dialer Queue - UK -2</label>
        <queue>Dialer_Queue_UK_2</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Dialer_Queue_UK_3_Call_List</fullName>
        <filterScope>Queue</filterScope>
        <label>Dialer Queue-UK-3</label>
        <queue>Dialer_Queue_UK_3</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Dialer_Queue_UK_4_Call_List</fullName>
        <filterScope>Queue</filterScope>
        <label>Dialer_Queue_UK-4</label>
        <queue>Dialer_Queue_UK_4</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Dialer_Queue_UK_5_Call_List</fullName>
        <filterScope>Queue</filterScope>
        <label>Dialer_Queue_UK-5</label>
        <queue>Dialer_Queue_UK_5</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Dialer_Queue_UK_Call_List</fullName>
        <filterScope>Queue</filterScope>
        <label>Dialer Queue - UK-1</label>
        <queue>Dialer_Queue_UK_1</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Call_List</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>My Call List</label>
    </listViews>
    <listViews>
        <fullName>Your_Call_List</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Your Call List</label>
    </listViews>
    <nameField>
        <label>Donor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Call List</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>